--- a/Stepic_C++_From_Yandex/Stepic_C++_From_Yandex.vcxproj.filters
+++ b/Stepic_C++_From_Yandex/Stepic_C++_From_Yandex.vcxproj.filters
@@ -23,7 +23,7 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Stepic_C++_From_Yandex.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
